[package]
authors = ["The Tremor Team"]
description = "Tremor Api Callbacks"
edition = "2021"
license = "Apache-2.0"
name = "tremor-api"
version = "0.13.0-rc.26"
homepage = "https://www.tremor.rs"

[dependencies]
halfbrown = "0.2"
http-types = "2"
log = "0.4"
serde = "1"
serde_yaml = "0.9"
simd-json = "0.13"
tokio = { version = "1.34", features = ["full"] }
# we don't need sessions or cookies or shitty logging middleware
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
tremor-pipeline = { version = "0.13.0-rc.26", path = "../tremor-pipeline" }
tremor-runtime = { version = "0.13.0-rc.26", path = "../" }
tremor-script = { version = "0.13.0-rc.26", path = "../tremor-script" }
tremor-value = { version = "0.13.0-rc.26", path = "../tremor-value" }
tremor-common = { version = "0.13.0-rc.26", path = "../tremor-common" }
tremor-system = { version = "0.13.0-rc.26", path = "../tremor-system" }

[dev-dependencies]
surf = { version = "2.3", default-features = false, features = [
	"h1-client-rustls",
] }
env_logger = "0.11"
