[package]
name = "tremor-archive"
authors = ["The Tremor Team"]
description = "Tremor Runtime"
documentation = "https://docs.tremor.rs"
edition = "2021"
homepage = "https://www.tremor.rs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tremor-rs/tremor-runtime"
version = "0.13.0-rc.32"

[dependencies]
tremor-common = { path = "../tremor-common", version = "0.13.0-rc.32" }
tremor-script = { path = "../tremor-script", version = "0.13.0-rc.32" }

tokio = { version = "1", default-features = false, features = [] }
tokio-tar = "0.3"
tokio-stream = "0.1"
thiserror = "1"
sha2 = "0.10"
simd-json = "0.13"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
serde_json = "1.0"
