[package]
authors = ["The Tremor Team"]
name = "tremor-codec"
edition = "2021"
description = "Tremor Script Interpreter"
documentation = "https://docs.rs/tremor-script"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tremor-rs/tremor-runtime"
version = "0.13.0-rc.16"


[dependencies]
tremor-value = { version = "0.13.0-rc.16", path = "../tremor-value" }
tremor-common = { version = "0.13.0-rc.16", path = "../tremor-common" }
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"
error-chain = "0.12"
futures = "0.3"
simd-json-derive = "0.11"
value-trait = "0.6"
beef = "0.5"
test-case = "3.1"
proptest = "1.1"
byteorder = "1.5"
itoa = "1"
ryu = "1"
lexical = "6"
simdutf8 = "0.1"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
matches = "0.1"
async-recursion = "1"

# codecs
schema_registry_converter = { version = "3", features = [
    "avro",
    "easy",
], path = "../../schema_registry_converter" }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "rustls-tls-native-roots",
] }
csv = "1.2"
tremor-influx = { version = "0.13.0-rc.16", path = "../tremor-influx" }
simd-json = "0.11"
apache-avro = { version = "0.16", features = [
    "snappy",
    "bzip",
    "xz",
    "zstandard",
    "bzip2",
] }
# git = "https://github.com/gklijs/schema_registry_converter.git", rev = "72d89d5" # we need this for v0.16 of avro versioning
serde = "1"
rmp-serde = "1.1"
syslog_loose = "0.19"
serde_yaml = "0.9"
