[package]
authors = ["The Tremor Team"]
name = "tremor-codec"
edition = "2021"
description = "Tremor Script Interpreter"
documentation = "https://docs.rs/tremor-script"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tremor-rs/tremor-runtime"
version = "0.13.0-rc.16"


[dependencies]
tremor-value = { version = "0.13.0-rc.16", path = "../tremor-value" }
tremor-common = { version = "0.13.0-rc.16", path = "../tremor-common" }
tremor-config = { version = "0.13.0-rc.16", path = "../tremor-config" }
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"
error-chain = "0.12"
futures = "0.3"
simd-json-derive = "0.13"
value-trait = "0.8"
beef = "0.5"
byteorder = "1.5"
itoa = "1"
ryu = "1"
lexical = "6"
simdutf8 = "0.1"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
async-recursion = "1"

schema_registry_converter = { version = "3", default-features = false, features = [
    "futures",
    "rustls_tls",
    "avro",
    "easy",
], git = "https://github.com/tremor-rs/schema_registry_converter.git", branch = "housekeeping" }

# codecs
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "rustls-tls-native-roots",
] }
csv = "1.2"
tremor-influx = { version = "0.13.0-rc.16", path = "../tremor-influx" }
simd-json = "0.13"
apache-avro = { version = "0.16", features = [
    "snappy",
    "bzip",
    "xz",
    "zstandard",
    "bzip2",
] }
# 
serde = "1"
rmp-serde = "1.1"
syslog_loose = "0.21"
serde_yaml = "0.9"

[dev-dependencies]
proptest = "1.4"
test-case = "3"
