[package]
authors = ["The Tremor Team"]
description = "Tremor common functions"
documentation = "https://docs.rs/tremor-commons"
edition = "2021"
license = "Apache-2.0"
name = "tremor-common"
readme = "README.md"
version = "0.13.0-rc.26"

[dependencies]
tokio = { version = "1", default-features = false, features = ["fs"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
beef = { version = "0.5", default-features = false, features = ["impl_serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
url = { version = "2", default-features = false, features = ["serde"] }
simd-json = { version = "0.13", features = ["known-key"] }
simd-json-derive = { version = "0.13", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["std"] }
regex = { version = "1", default-features = false }
lazy_static = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
test-case = "3"
