[package]
name = "tremor-config"
edition = "2021"
authors = ["The Tremor Team"]
description = "Tremor Script Interpreter"
documentation = "https://docs.rs/tremor-script"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tremor-rs/tremor-runtime"
version = "0.13.0-rc.16"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tremor-value = { path = "../tremor-value" }
serde = "1"
simd-json = "0.13"
